scss/todo.scss
@use "variables" as v;

/*  
    To-Do list formatting, including the pinned comments modal.
*/

$breakpoint_stacked_to_row: 895px;
$breakpoint_set_min_modal_size: 650px;

.empty-section-notice{
    padding: 0.2rem 0.75rem;
}

.todoList{
    --borderRadius: #{v.px-to-rem(6)};

    --cellPaddingY: #{v.px-to-rem(12)};
    --cellPaddingX: #{v.px-to-rem(12)};

    --cellPadding: var(--cellPaddingY) var(--cellPaddingX);
    --rowHeight: #{v.px-to-rem(40)};

    display: block;
    width: 100%;

    &_head{
        display: none;
    }

    &_container{
        display: flex;
        flex-direction: column;
        gap: v.px-to-rem(16);
        padding: v.px-to-rem(16) 0;
    }

}

.todoJob{
    display: flex;
    flex-direction: column;
    justify-content: stretch;
    box-shadow: 0 v.px-to-rem(2) v.px-to-rem(12) v.px-to-rem(3) rgba(black, .2);

    border-radius: var(--borderRadius);
    border: 1px solid v.$c_tone-600;

    position: relative;
    &_tdRemove{
        position: absolute;
        top: 0;
        right: v.px-to-rem(4);

        display: flex;
        align-items: center;
        justify-content: start;

        .delete-panel{
            float: none;
            margin: 0;
            padding: 0;
            width: v.px-to-rem(25);

            span{
                pointer-events: none;
            }
        }
    }
    &_id{
        color: v.$c_txt_main;

        // Goal: nudge down a bit so the baseline of the text looks centered
        position: relative;
        top: v.px-to-rem(2);
    }
    &_countryFlag{
        display: inline-block;
    }
    &_tdID{
        padding: 0;
        a{
            border-top-left-radius: var(--borderRadius);
            border-top-right-radius: var(--borderRadius);
            padding: var(--cellPadding);
            color: v.$c_txt_main;
            text-decoration: none;
            background: v.$c_tone-500;
            background: linear-gradient(180deg, v.$c_tone-500 0%, v.$c_tone-600 100%);
            height: 100%;
            font-size: 1rem;
            line-height: 1;

            display: flex;
            align-items: center;

            &:hover{
                background: v.$c_tone-400;
                background: linear-gradient(180deg, v.$c_tone-400 0%, v.$c_tone-500 100%);
            }
        }

    }
    &_tdSummary{
        padding: 0;
        a{
            color: v.$c_txt_main;
            text-decoration: none;
            padding: var(--cellPadding);
            background: v.$c_tone-800;
            background: linear-gradient(180deg, v.$c_tone-800 0%, v.$c_tone-900 100%);
            display: block;
            height: 100%;

            &:hover{
                background: v.$c_tone-700;
                background: linear-gradient(180deg, v.$c_tone-700 0%, v.$c_tone-800 100%);
            }
        }
    }
    &_summaryText{
        position: relative;
        top: 2px;
    }
    &_tdStatus{
        padding: var(--cellPadding);
        display: flex;
        align-items: start;
        gap: v.px-to-rem(3);
        background: v.$c_tone-800;
        background: linear-gradient(180deg, v.$c_tone-800 0%, v.$c_tone-900 100%);

        border-style: solid;
        border-color: v.$c_tone-700;
        border-width: 1px 0;
    }
    &_tdPinned{
        background: v.$c_tone-800;
        background: linear-gradient(180deg, v.$c_tone-800 0%, v.$c_tone-900 100%);

        border-bottom-right-radius: var(--borderRadius);
        border-bottom-left-radius: var(--borderRadius);
        overflow: hidden;

        display: flex;
        gap: v.px-to-rem(4);
        height: 100%;
    }
    &_pinnedHeading{
        margin: 0;
        width: calc(1rem +  var(--cellPaddingX) * 2);
        flex: 0 0 auto;
        
        background-image: url(../images/i-pin-filled-grey.svg);
        background-repeat: no-repeat;
        background-size: 1rem;
        background-position: var(--cellPaddingY) var(--cellPaddingX);
    }

    &_pinnedComment{
        width: 100%;
        overflow: hidden;
        display: flex;
        align-items: center;
        gap: v.px-to-rem(8);
        color: v.$c_txt_main;
        border-style: solid;
        border-color: transparent;
        border-width: 0 0 0 4px;

        background: v.$c_tone-800;
        background: linear-gradient(45deg, v.$c_tone-800 0%, v.$c_tone-900 100%);

        &-highlighted{
            border-color: yellow;
            background: v.$c_tone-700;
            background: linear-gradient(45deg, rgba(white, .1) 0%, v.$c_tone-900 45%);
        }

        &-empty{
            padding-left: v.px-to-rem(12);
            border-color: v.$c_tone-800;
            color: v.$c_tone-400;

            &:hover{
                color: v.$c_txt_main;
            }
        }

        &:hover{
            background: v.$c_tone-600;
            background: linear-gradient(45deg, v.$c_tone-600 0%, v.$c_tone-700 100%);
        }
    }

    &_pinnedPrivacyStatus{
        display: none;
    }

    &_pinnedContents{
        padding: var(--cellPaddingY) v.px-to-rem(6);
        height: var(--rowHeight);
        line-height: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}
/* ... */

